# verifiers

./: .gitignore  README.md  gsm8k_unsloth.py  pyproject.toml
grpo_trainer_lora_model/: adapter_config.json
verifiers/examples/: gsm8k_calculator.py  gsm8k_calculator_unsloth.py  gsm8k_code_unsloth.py  gsm8k_simple_unsloth.py  gsm8k_unsloth.py
verifiers/trainers/: grpo_env_trainer.py
verifiers/utils/: config_utils.py
